# plonky2-ed25519

./: Cargo.toml
src/: main.rs
src/curve/: curve_multiplication.rs  ed25519.rs
src/gadgets/: curve.rs  curve_fixed_base.rs  eddsa.rs  nonnative.rs
