[package]
name = "plonky2_ed25519"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { version = "1.1.0", default-features = false }
plonky2_u32 = { git = "https://github.com/txhsl/plonky2-u32.git", tag = "v0.1.1", default-features = false }
plonky2_ecdsa = { git = "https://github.com/txhsl/plonky2-ecdsa.git", tag = "v0.1.1", default-features = false }
plonky2_sha512 = { git = "https://github.com/txhsl/plonky2-sha512.git", tag = "v0.1.1", default-features = false }
curve25519-dalek = { git = "https://github.com/wormhole-foundation/curve25519-dalek", rev = "8ac0b892c7477ea8f023ec81332420fc4faae595" }
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
num = { version = "0.4", default-features = false, features = ["alloc", "rand"] }
rayon = "1.5.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
anyhow = "1.0.40"
ed25519-compact = "2.0.4"
env_logger = "0.10.0"
log = "0.4.14"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
unroll = "0.1.5"
keccak-hash = "0.10.0"
static_assertions = "1.1.0"
sha2 = "0.10"
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0
